admin: fix duplicated scrollbar in pipeline page

--- a/admin/src/components/routes/PipelineWrapper/Pipeline.css
+++ b/admin/src/components/routes/PipelineWrapper/Pipeline.css
@@ -164,6 +164,7 @@
 
 	.fullscreen-transformation {
 		top: 100px !important;
+		height: calc(100% - 100px) !important;
 	}
 }
 
